--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "node-json-db": "^0.11.0",
     "qs": "^6.9.4",
     "request": "^2.88.2",
